部分完成搜索功能，修改金额为decimal类型，修改子表无法对齐的问题

--- a/TenderInfo/Views/Account/Frame.cshtml
+++ b/TenderInfo/Views/Account/Frame.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "招标管理台账--物资";
+    ViewBag.Title = "招标管理台账--框架";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <span id="userRole" class="hidden">
@@ -9,12 +9,12 @@
         @:招标管理
     }
 </span>
-<span id="accountType" class="hidden">物资</span>
+<span id="accountType" class="hidden">框架</span>
 
 @Html.Partial("NewAccountModal")
 <div class="box box-danger">
     <div class="box-header">
-        <h3 class="box-title">招标管理台账--物资</h3>
+        <h3 class="box-title">招标管理台账--框架</h3>
         <div class="box-tools pull-right">
             <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="" data-original-title="collapse">
                 <i class="fa fa-minus"></i>
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="box-body">
-        @Html.Partial("SearchInfo", ViewData["type"] = "物资")
+        @Html.Partial("SearchInfo", ViewData["type"] = "框架")
         <hr />
         <div class="row">
             <div class="col-md-12">
@@ -34,8 +34,9 @@
                         </button>
                     </div>
                 }
-                @Html.Partial("TableInfoMaterial")
+                @Html.Partial("TableInfoFrame")
             </div>
         </div>
     </div>
 </div>
+
