--- a/TenderInfo/Views/Account/Project.cshtml
+++ b/TenderInfo/Views/Account/Project.cshtml
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div class="box-body">
-        @Html.Partial("SearchInfoProject", ViewData["type"] = "工程")
+        @Html.Partial("SearchInfo", ViewData["type"] = "工程")
         <hr />
         <div class="row">
             <div class="col-md-12">
