--- a/TenderInfo/Views/Account/Service.cshtml
+++ b/TenderInfo/Views/Account/Service.cshtml
@@ -1,9 +1,17 @@
 ﻿
 @{
-    ViewBag.Title = "Service";
+    ViewBag.Title = "招标管理台账--服务";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<span id="userRole" class="hidden">
+    @if (User.IsInRole("招标管理"))
+    {
+        @:招标管理
+    }
+</span>
+<span id="accountType" class="hidden">服务</span>
 
+@Html.Partial("NewAccountModal")
 <div class="box box-danger">
     <div class="box-header">
         <h3 class="box-title">招标管理台账--服务</h3>
@@ -14,7 +22,7 @@
         </div>
     </div>
     <div class="box-body">
-        @Html.Partial("SearchInfoProject", ViewData["type"] = "服务")
+        @Html.Partial("SearchInfo", ViewData["type"] = "服务")
         <hr />
         <div class="row">
             <div class="col-md-12">
@@ -31,4 +39,5 @@
         </div>
     </div>
 </div>
+
 
