--- a/TenderInfo/Views/Account/TableInfoFrame.cshtml
+++ b/TenderInfo/Views/Account/TableInfoFrame.cshtml
@@ -2,8 +2,8 @@
 <link href="~/Content/bootstrap-table-fixed-columns2.css" rel="stylesheet" />
 <script src="~/Scripts/bootstrap-table-fixed-columns2.js"></script>
 <style>
-    #bsTable th{
-        vertical-align:middle;
+    #bsTable th {
+        vertical-align: middle;
     }
 </style>
 <div class="table-responsive">
@@ -32,7 +32,7 @@
                     formatter: function (value, row, index) {
                         //这里的三个参数：value表示当前行当前列的值；row表示当前行的数据；index表示当前行的索引（从0开始）。
                         //var html = '<button type="button" onclick="editModel(' + row.account.AccountID + ')" class="btn btn-link">' + row.ProjectName + '</button >';
-                        var html2 = "<a href='/Account/EditAccountProject?id=" + row.account.AccountID +"&type="+row.account.ProjectType + "'>" + row.account.ProjectName + '</a>';
+                        var html2 = "<a href='/Account/EditAccountFrame?id=" + row.account.AccountID + "'>" + row.account.ProjectName + '</a>';
                         return html2;
                     }
                 },
@@ -59,6 +59,13 @@
                     title: '招标项目负责人'
                 },
                 {
+                    field: 'account.UsingDeptName',
+                    rowspan: 2,
+                    colspan: 1,
+                    valign: "middle",
+                    title: '使用单位'
+                },
+                {
                     field: 'account.ProjectResponsibleDeptName',
                     rowspan: 2,
                     colspan: 1,
@@ -80,13 +87,6 @@
                     title: '投资计划批复文号'
                 },
                 {
-                    field: 'account.InvestSource',
-                    rowspan: 2,
-                    colspan: 1,
-                    valign: "middle",
-                    title: '资金来源'
-                },
-                {
                     field: 'account.TenderRange',
                     rowspan: 2,
                     colspan: 1,
@@ -94,18 +94,39 @@
                     title: '招标范围'
                 },
                 {
-                    field: 'account.ProjectTimeLimit',
+                    field: 'account.IsHaveCount',
                     rowspan: 2,
                     colspan: 1,
                     valign: "middle",
-                    title: '工期'
+                    title: '是否带量'
+                },
+                {
+                    field: 'account.TenderMode',
+                    rowspan: 2,
+                    colspan: 1,
+                    valign: "middle",
+                    title: '招标方式'
+                },
+                {
+                    field: 'account.BidEvaluation',
+                    rowspan: 2,
+                    colspan: 1,
+                    valign: "middle",
+                    title: '评标方法'
+                },
+                {
+                    field: 'account.SupplyPeriod',
+                    rowspan: 2,
+                    colspan: 1,
+                    valign: "middle",
+                    title: '供货期'
                 },
                 {
                     field: 'account.ProgramAcceptDate',
                     rowspan: 2,
                     colspan: 1,
                     valign: "middle",
-                    title: '收到申请日期（线上项目填方案分派日期）',
+                    title: '收到方案日期',
                     formatter: function (value, row, index) {
                         return getJsonDateShort(row.account.ProgramAcceptDate);
                     }
@@ -171,8 +192,8 @@
                     title: '购买招标文件潜在投标人',
                     cellStyle: function (value, row, index) {
                         return {
-                            classes: "text-nowrap",
-                            css: { "padding": "0px","vertical-align":"top" }
+                            css: { "padding": "0px", "vertical-align": "top" },
+                            classes: "text-nowrap"
                         };
                     },
                     formatter: function (value, row, index) {
@@ -205,7 +226,26 @@
                     }
                 },
                 {
-                    title: '报价（万元）',
+                    rowspan: 2,
+                    colspan: 1,
+                    title: '产品制造商（代理、贸易商投标时填写）',
+                    cellStyle: function (value, row, index) {
+                        return {
+                            classes: "text-nowrap",
+                            css: { "padding": "0px", "vertical-align": "top" }
+                        };
+                    },
+                    formatter: function (value, row, index) {
+                        var list = "<table class='table  table-bordered'>";
+                        $.each(row.accountChildFirst, function (indexInArray, valueOfElement) {
+                            list += "<tr><td>" + valueOfElement.ProductManufacturer + "</td></tr>";
+                        });
+                        list += "</table>";
+                        return list;
+                    }
+                },
+                {
+                    title: '投标总价（万元）',
                     rowspan: 2,
                     colspan: 1,
                     cellStyle: function (value, row, index) {
@@ -217,6 +257,25 @@
                         var list = "<table class='table  table-bordered'>";
                         $.each(row.accountChildFirst, function (indexInArray, valueOfElement) {
                             list += "<tr><td>" + valueOfElement.QuotedPriceSum + "</td></tr>";
+                        });
+                        list += "</table>";
+                        return list;
+                    }
+                },
+                {
+                    rowspan: 2,
+                    colspan: 1,
+                    title: '初步评审是否被否决',
+                    cellStyle: function (value, row, index) {
+                        return {
+                            classes: "text-nowrap",
+                            css: { "padding": "0px", "vertical-align": "top" }
+                        };
+                    },
+                    formatter: function (value, row, index) {
+                        var list = "<table class='table  table-bordered'>";
+                        $.each(row.accountChildFirst, function (indexInArray, valueOfElement) {
+                            list += "<tr><td>" + valueOfElement.NegationExplain + "</td></tr>";
                         });
                         list += "</table>";
                         return list;
@@ -237,25 +296,23 @@
                     title: '预计投资（万元）'
                 },
                 {
-                    field: 'account.TenderRestrictSumPrice',
-                    rowspan: 2,
-                    colspan: 1,
-                    valign: "middle",
-                    title: '招标控制价（万元）'
+                    title: '招标控制价',
+                    colspan: 2,
+                    rowspan: 1,
+                    align: "center"
                 },
                 {
                     title: '中标金额（万元）',
-                    rowspan: 2,
-                    colspan: 1,
-                    field: 'account.TenderSuccessSumPrice',
-                    valign: "middle"
+                    colspan: 2,
+                    rowspan: 1,
+                    align: "center"
                 },
                 {
                     field: 'account.SaveCapital',
                     rowspan: 2,
                     colspan: 1,
                     valign: "middle",
-                    title: '节约资金（万元）'
+                    title: '与控制价比节约资金（万元）/资金节约率'
                 },
                 {
                     title: '评标委员会',
@@ -325,6 +382,26 @@
                 }
             ],
             [
+                {
+                    field: 'account.TenderRestrictUnitPrice',
+                    valign: "middle",
+                    title: '单价'
+                },
+                {
+                    field: 'account.TenderRestrictSumPrice',
+                    valign: "middle",
+                    title: '总价（万元）'
+                },
+                {
+                    field: 'account.TenderSuccessUnitPrice',
+                    valign: "middle",
+                    title: '单价'
+                },
+                {
+                    field: 'account.TenderSuccessSumPrice',
+                    valign: "middle",
+                    title: '总价（万元）'
+                },
                 {
                     valign: "top",
                     title: '姓名',
@@ -504,7 +581,7 @@
                     formatter: function (value, row, index) {
                         var list = "<table class='table  table-bordered'>";
                         $.each(row.accountChildFour, function (indexInArray, valueOfElement) {
-                            list += "<tr><td>" + (valueOfElement.ClarifyLaunchDate===null?"-":getJsonDateShort(valueOfElement.ClarifyLaunchDate)) + "</td></tr>";
+                            list += "<tr><td>" + (valueOfElement.ClarifyLaunchDate === null ? "-" : getJsonDateShort(valueOfElement.ClarifyLaunchDate)) + "</td></tr>";
                         });
                         list += "</table>";
                         return list;
@@ -540,7 +617,7 @@
                     formatter: function (value, row, index) {
                         var list = "<table class='table  table-bordered'>";
                         $.each(row.accountChildFour, function (indexInArray, valueOfElement) {
-                            list += "<tr><td>" + (valueOfElement.ClarifyAcceptDate===null?"-":getJsonDateShort(valueOfElement.ClarifyAcceptDate)) + "</td></tr>";
+                            list += "<tr><td>" + (valueOfElement.ClarifyAcceptDate === null ? "-" : getJsonDateShort(valueOfElement.ClarifyAcceptDate)) + "</td></tr>";
                         });
                         list += "</table>";
                         return list;
@@ -612,7 +689,7 @@
                     formatter: function (value, row, index) {
                         var list = "<table class='table  table-bordered'>";
                         $.each(row.accountChildFour, function (indexInArray, valueOfElement) {
-                            list += "<tr><td>" + (valueOfElement.ClarifyReplyDate===null?"-":getJsonDateShort(valueOfElement.ClarifyReplyDate)) + "</td></tr>";
+                            list += "<tr><td>" + (valueOfElement.ClarifyReplyDate === null ? "-" : getJsonDateShort(valueOfElement.ClarifyReplyDate)) + "</td></tr>";
                         });
                         list += "</table>";
                         return list;
@@ -702,7 +779,7 @@
                     formatter: function (value, row, index) {
                         var list = "<table class='table  table-bordered'>";
                         $.each(row.accountChildFive, function (indexInArray, valueOfElement) {
-                            list += "<tr><td>" + (valueOfElement.DissentAcceptDate===null?"-":getJsonDateShort(valueOfElement.DissentAcceptDate)) + "</td></tr>";
+                            list += "<tr><td>" + (valueOfElement.DissentAcceptDate === null ? "-" : getJsonDateShort(valueOfElement.DissentAcceptDate)) + "</td></tr>";
                         });
                         list += "</table>";
                         return list;
@@ -774,7 +851,7 @@
                     formatter: function (value, row, index) {
                         var list = "<table class='table  table-bordered'>";
                         $.each(row.accountChildFive, function (indexInArray, valueOfElement) {
-                            list += "<tr><td>" + (valueOfElement.DissentReplyDate===null?"-":getJsonDateShort(valueOfElement.DissentReplyDate)) + "</td></tr>";
+                            list += "<tr><td>" + (valueOfElement.DissentReplyDate === null ? "-" : getJsonDateShort(valueOfElement.DissentReplyDate)) + "</td></tr>";
                         });
                         list += "</table>";
                         return list;
@@ -805,7 +882,7 @@
             minimumCountColumns: 2,             //最少允许的列数
             clickToSelect: false,                //是否启用点击选中行
             //height: 600,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
-            uniqueId: "account.AccountID",          //每一行的唯一标识，一般为主键列
+            uniqueId: "account.AccountMaterialID",          //每一行的唯一标识，一般为主键列
             showToggle: false,                    //是否显示详细视图和列表视图的切换按钮
             cardView: false,                    //是否显示详细视图
             detailView: false,                   //是否显示父子表
