--- a/TenderInfo/Views/ProgressInfo/ModalMaterial.cshtml
+++ b/TenderInfo/Views/ProgressInfo/ModalMaterial.cshtml
@@ -128,6 +128,11 @@
                                             招标项目负责人
                                         </label>
                                         <span id="tbxProjectResponsiblePersonEdit" class="label label-success"></span>
+                                        <label for="ddlProgressStateEdit">进度：</label>
+                                        <select id="ddlProgressStateEdit" name="ddlProgressStateEdit" class="form-control">
+                                            <option value="对接">对接</option>
+                                            <option value="实施">实施</option>
+                                        </select>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
@@ -167,7 +172,7 @@
                                                 <label for="tbxTechnicalSpecificationApproveDateEdit">
                                                     技术规格书（技术文件、图纸等）定稿时间
                                                 </label>
-                                                <input id="tbxTechnicalSpecificationApproveDateEdit" name="tbxTechnicalSpecificationApproveDateEdit" class="form-control input-sm" placeholder="定稿时间" />
+                                                <input id="tbxTechnicalSpecificationApproveDateEdit" name="tbxTechnicalSpecificationApproveDateEdit" class="form-control input-sm progressDate" placeholder="定稿时间" />
                                             </div>
                                         </div>
                                     </div>
@@ -177,7 +182,7 @@
                                                 <label for="tbxSynthesizeEvaluationRuleApproveDateEdit">
                                                     综合法评标标准定稿时间
                                                 </label>
-                                                <input id="tbxSynthesizeEvaluationRuleApproveDateEdit" name="tbxSynthesizeEvaluationRuleApproveDateEdit" class="form-control input-sm" placeholder="综合法评标标准定稿时间" />
+                                                <input id="tbxSynthesizeEvaluationRuleApproveDateEdit" name="tbxSynthesizeEvaluationRuleApproveDateEdit" class="form-control input-sm progressDate" placeholder="综合法评标标准定稿时间" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -185,7 +190,7 @@
                                                 <label for="tbxTenderProgramAuditDateEdit">
                                                     招标方案联审时间
                                                 </label>
-                                                <input id="tbxTenderProgramAuditDateEdit" name="tbxTenderProgramAuditDateEdit" class="form-control input-sm" placeholder="招标方案联审时间" />
+                                                <input id="tbxTenderProgramAuditDateEdit" name="tbxTenderProgramAuditDateEdit" class="form-control input-sm progressDate" placeholder="招标方案联审时间" />
                                             </div>
                                         </div>
                                     </div>
@@ -200,7 +205,7 @@
                                                 <label for="tbxProgramAcceptDateEdit">
                                                     招标方案接收时间
                                                 </label>
-                                                <input id="tbxProgramAcceptDateEdit" name="tbxProgramAcceptDateEdit" class="form-control input-sm" placeholder="招标方案接收时间" />
+                                                <input id="tbxProgramAcceptDateEdit" name="tbxProgramAcceptDateEdit" class="form-control input-sm progressDate" placeholder="招标方案接收时间" />
                                             </div>
                                         </div>
                                     </div>
@@ -210,7 +215,7 @@
                                                 <label for="tbxTenderFileSaleStartDateEdit">
                                                     发售招标文件开始日期
                                                 </label>
-                                                <input id="tbxTenderFileSaleStartDateEdit" name="tbxTenderFileSaleStartDateEdit" class="form-control input-sm" placeholder="发售招标文件开始日期" />
+                                                <input id="tbxTenderFileSaleStartDateEdit" name="tbxTenderFileSaleStartDateEdit" class="form-control input-sm progressDateTime" placeholder="发售招标文件开始日期" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -218,7 +223,7 @@
                                                 <label for="tbxTenderFileSaleEndDateEdit">
                                                     发售招标文件截止日期
                                                 </label>
-                                                <input id="tbxTenderFileSaleEndDateEdit" name="tbxTenderFileSaleEndDateEdit" class="form-control input-sm" placeholder="发售招标文件截止日期" />
+                                                <input id="tbxTenderFileSaleEndDateEdit" name="tbxTenderFileSaleEndDateEdit" class="form-control input-sm progressDateTime" placeholder="发售招标文件截止日期" />
                                             </div>
                                         </div>
                                     </div>
@@ -228,7 +233,7 @@
                                                 <label for="tbxTenderStartDateEdit">
                                                     开标日期
                                                 </label>
-                                                <input id="tbxTenderStartDateEdit" name="tbxTenderStartDateEdit" class="form-control input-sm" placeholder="开标日期" />
+                                                <input id="tbxTenderStartDateEdit" name="tbxTenderStartDateEdit" class="form-control input-sm progressDateTime" placeholder="开标日期" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
@@ -236,7 +241,7 @@
                                                 <label for="tbxTenderSuccessFileDateEdit">
                                                     中标通知书发出时间
                                                 </label>
-                                                <input id="tbxTenderSuccessFileDateEdit" name="tbxTenderSuccessFileDateEdit" class="form-control input-sm" placeholder="中标通知书发出时间" />
+                                                <input id="tbxTenderSuccessFileDateEdit" name="tbxTenderSuccessFileDateEdit" class="form-control input-sm progressDate" placeholder="中标通知书发出时间" />
                                             </div>
                                         </div>
                                     </div>
@@ -330,7 +335,7 @@
             $("#tbxContractResponsiblePerson,#tbxProjectName").val("");
         }
 
-        $("#tbxTechnicalSpecificationApproveDateEdit,#tbxSynthesizeEvaluationRuleApproveDateEdit,#tbxTenderProgramAuditDateEdit,#tbxProgramAcceptDateEdit,#tbxTenderFileSaleStartDateEdit,#tbxTenderFileSaleEndDateEdit,#tbxTenderStartDateEdit,#tbxTenderSuccessFileDateEdit").datetimepicker({
+        $(".progressDate").datetimepicker({
             language: 'zh-CN',
             weekStart: 1,
             todayBtn: 1,
@@ -340,6 +345,16 @@
             minView: 2,
             forceParse: 0,
             format: 'yyyy-mm-dd'
+        });
+        $(".progressDateTime").datetimepicker({
+            language: 'zh-CN',
+            weekStart: 1,
+            todayBtn: 1,
+            autoclose: 1,
+            todayHighlight: true,
+            minView: 0,
+            forceParse: 0,
+            format: 'yyyy-mm-dd hh:ii'
         });
 
         //新增按钮
@@ -431,10 +446,9 @@
                 }
                 else {
                     var selectInfo = $('#bsTableSelectAccount').bootstrapTable('getSelections');
-                    console.log(selectInfo[0].AccountMaterialID);
-                    var accountMaterialID = selectInfo[0].AccountMaterialID;
-                    var progressMaterialID = $("#lblProgressInfoID").text();
-                    $.post("/Account/UpdateProgressMaterial", { "accountMaterialID": accountMaterialID, "progressMaterialID": progressMaterialID },
+                    var accountID = selectInfo[0].AccountID;
+                    var progressID = $("#lblProgressInfoID").text();
+                    $.post("/Account/UpdateProgress", { "accountID": accountID, "progressID": progressID },
                         function (data, textStatus, jqXHR) {
                             if (data === "ok") {
                                 $("#selectMaterialAccountModal").modal("hide");
